# rhacobot

./: LICENSE  README.md  init_rhacobot.bash
rhacobot_bringup/: CMakeLists.txt  package.xml
rhacobot_bringup/config/: joint_trajectory_publisher.yaml  rhacobot_controllers.yaml  robot_localization.config.yaml
rhacobot_bringup/launch/: bringup.launch.py  demo_joint_trajectory_controller.launch.py  rhacobot.launch.py  simulation.launch.py  test_joint_trajectory_controller.launch.py
rhacobot_control/: CMakeLists.txt  package.xml
rhacobot_control/config/: controllers.yaml
rhacobot_control/launch/: control_manager.launch.py  control_spawner.launch.py  controller_manager.launch.py  controllers.launch.py  controllers_spawner.launch.py
rhacobot_control/xacro/: mobile_base.ros2_control.xacro  rhacobot.ros2_control.xacro  tail.ros2_control.xacro
rhacobot_controllers/: CMakeLists.txt  package.xml
rhacobot_description/: CMakeLists.txt  package.xml
rhacobot_description/launch/: display.launch.py  gazebo.launch.py  gui.launch.py  robot_state_publisher.launch.py  rviz.launch.py  rviz_state_pub.launch.py  view_robot.launch.py  visualization.launch.py
rhacobot_description/meshes/: chassis.stl  tail_joint_a.stl  tail_joint_b.stl  tail_wheel.stl  trail_joint_c.stl  (+1 more)
rhacobot_gazebo/: CMakeLists.txt  package.xml
rhacobot_gazebo/launch/: gazebo.launch.py
rhacobot_gazebo/macros/: imu.xacro
rhacobot_gazebo/xacro/: rhacobot.gazebo.xacro  tail.gazebo.xacro
rhacobot_hardware/: CMakeLists.txt  package.xml
rhacobot_localization/: CMakeLists.txt  package.xml
rhacobot_navigation/: CMakeLists.txt  package.xml
rhacobot_simulation/: CMakeLists.txt  package.xml
rhacobot_teleop/: CMakeLists.txt  package.xml
utils/: analyse_candump.py  benchmark_can.py
(+33 files in other folders)
