<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rhacobot_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configurations for Rhacobot</description>
  <maintainer email="orcil.lionel@gmail.com">Lionel ORCIL</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ros2_controllers_test_nodes</exec_depend>

  <exec_depend>rhacobot_control</exec_depend>
  <exec_depend>rhacobot_description</exec_depend>
  <exec_depend>rhacobot_localization</exec_depend>
  <exec_depend>rhacobot_navigation</exec_depend>
  <exec_depend>rhacobot_simulation</exec_depend>
  <exec_depend>rhacobot_teleop</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>